// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > # Of Files Generated 1`] = `6`;

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: minecraft/module
    items:
    - name: minecraft/module
      href: minecraft/module/minecraft-module.md
    - name: minecraft/module Changelog
      href: minecraft/module/changelog.md
    - name: ExampleClass1
      href: minecraft/module/ExampleClass1.md
"
`;

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > msdocs/scriptapi/minecraft/module/ExampleClass1.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module.ExampleClass1 Class
description: Contents of the @minecraft/module.ExampleClass1 class.
---
# ExampleClass1 Class

## Methods
::: moniker range="=minecraft-bedrock-experimental"
- [testMethodWithAddedArgument](#testmethodwithaddedargument)
::: moniker-end
::: moniker range="=minecraft-bedrock-stable"
- [testMethodWithAddedArgument](#testmethodwithaddedargument)
::: moniker-end

::: moniker range="=minecraft-bedrock-experimental"
### **testMethodWithAddedArgument**
\`
testMethodWithAddedArgument(addedArg?: number): boolean
\`

#### **Parameters**
- **addedArg**?: *number*

**Returns** *boolean*

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
  
Notes:
- This function can't be called in restricted-execution mode.
::: moniker-end

::: moniker range="=minecraft-bedrock-stable"
### **testMethodWithAddedArgument**
\`
testMethodWithAddedArgument(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.
::: moniker-end
"
`;

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > msdocs/scriptapi/minecraft/module/changelog.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module Changelog
description: Changelog of the \`@minecraft/module\` module
---
# \`@minecraft/module\` Changelog

## Version Changes
- [1.1.0-beta.1.2.3-preview.5](#110-beta123-preview5)
- [1.0.0-rc.1.2.3-preview.5](#100-rc123-preview5)

## 1.1.0-beta.1.2.3-preview.5
#### Changed *[\`ExampleClass1\`](ExampleClass1.md)*
- Changed function *[\`testMethodWithAddedArgument\`](ExampleClass1.md#testmethodwithaddedargument)*
  - Added argument \`addedArg\`
#### Changed function \`ChangedFunctionArgument\`
- Added argument \`optionalType\`
## 1.0.0-rc.1.2.3-preview.5
#### Added \`@minecraft/module\` Module
"
`;

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > msdocs/scriptapi/minecraft/module/minecraft-module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: minecraft/module Module
description: Contents of the @minecraft/module module
monikerRange: "=minecraft-bedrock-experimental"
---
# \`@minecraft/module\` Module

> [!CAUTION]
> This module is still in pre-release.  It may change or it may be removed in future releases.

## [Changelog](changelog.md)

## Manifest Details
\`\`\`json
{
    "module_name": "@minecraft/module",
    "version": "1.1.0-beta.1.2.3-preview.5"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.1.0-beta.1.2.3-preview.5\`
- \`1.0.0-rc.1.2.3-preview.5\`

## Classes
- [ExampleClass1](ExampleClass1.md)

## Functions

::: moniker range="=minecraft-bedrock-experimental"
### **ChangedFunctionArgument**
\`
ChangedFunctionArgument(arg: string, optionalType?: number): void
\`

#### **Parameters**
- **arg**: *string*
- **optionalType**?: *number* = \`\`

> [!CAUTION]
> This function is still in pre-release.  Its signature may change or it may be removed in future releases.
  
Notes:
- This function can throw errors.
::: moniker-end

::: moniker range="=minecraft-bedrock-stable"
### **ChangedFunctionArgument**
\`
ChangedFunctionArgument(arg: string): void
\`

#### **Parameters**
- **arg**: *string*
  
Notes:
- This function can throw errors.
::: moniker-end
"
`;

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > typescript/@minecraft/module@1.0.0-rc.1.2.3-preview.5.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @preview
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClass1 {
    private constructor();
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    testMethodWithAddedArgument(): boolean;
}

/**
 * @throws This function can throw errors.
 */
export function ChangedFunctionArgument(arg: string): void;
"
`;

exports[`Additive Beta Change > Generates correct output when a stable API has an additive change in beta > typescript/@minecraft/module@1.1.0-beta.1.2.3-preview.5.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @beta
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "@minecraft/module",
 *   "version": "1.1.0-beta"
 * }
 * \`\`\`
 *
 */
export class ExampleClass1 {
    private constructor();
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    testMethodWithAddedArgument(addedArg?: number): boolean;
}

/**
 * @throws This function can throw errors.
 */
export function ChangedFunctionArgument(arg: string, optionalType?: number): void;
"
`;
